// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visibility Hides throwing visibility function: Nothing 1`] = `null`;

exports[`Visibility Simple visibility: Input visible 1`] = `
<div>
  <label
    class="stringField "
  >
    <span
      class="title"
    />
  </label>
  <input
    type="string"
    value="World"
  />
  <span />
  <span />
</div>
`;

exports[`Visibility Simple visibility: Nothing 1`] = `null`;

exports[`Visibility Toggle visibility: Hello input invisible 1`] = `
<div>
  <label
    class="objectField "
  >
    <span
      class="title"
    />
  </label>
  <div>
    <div>
      <label
        class="booleanField "
      >
        <span
          class="title"
        >
          visible
        </span>
      </label>
      <input
        type="checkbox"
        value="false"
      />
      <span />
      <span />
    </div>
  </div>
  <span />
  <span />
</div>
`;

exports[`Visibility Toggle visibility: Hello input visible 1`] = `
<div>
  <label
    class="objectField "
  >
    <span
      class="title"
    />
  </label>
  <div>
    <div>
      <label
        class="stringField "
      >
        <span
          class="title"
        >
          val
        </span>
      </label>
      <input
        type="string"
        value="Hello"
      />
      <span />
      <span />
    </div>
    <div>
      <label
        class="booleanField "
      >
        <span
          class="title"
        >
          visible
        </span>
      </label>
      <input
        type="checkbox"
        value="true"
      />
      <span />
      <span />
    </div>
  </div>
  <span />
  <span />
</div>
`;
